-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: hs25, 8u20, 9
-
Component/s: hotspot
-
b15
-
Verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8063300 | 8u45 | Vladimir Ivanov | P2 | Resolved | Fixed | b01 |
| JDK-8058356 | 8u40 | Vladimir Ivanov | P2 | Closed | Fixed | b06 |
| JDK-8071036 | emb-8u47 | Vladimir Ivanov | P2 | Resolved | Fixed | team |
All info I could find was:
Java HotSpot(TM) 64-Bit Server VM warning: Thread holding lock at safepoint that vm can block on: MethodCompileQueue_lock
- backported by
-
JDK-8063300 Thread holding lock at safepoint that vm can block on: MethodCompileQueue_lock
-
- Resolved
-
-
JDK-8071036 Thread holding lock at safepoint that vm can block on: MethodCompileQueue_lock
-
- Resolved
-
-
JDK-8058356 Thread holding lock at safepoint that vm can block on: MethodCompileQueue_lock
-
- Closed
-
- duplicates
-
JDK-8039117 vm/mlvm/meth/stress/compiler/sequences nightly failures
-
- Closed
-
-
JDK-8042925 Consider avoiding safepoints in AdvancedThresholdPolicy::select_task
-
- Closed
-
- relates to
-
JDK-8025842 Convert warning("Thread holding lock at safepoint that vm can block on") to fatal(...)
-
- Closed
-
-
JDK-8043061 Tiered: MethodCounters should be present for methods enqueued for compilation
-
- Closed
-